fixed navbar links vertical alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
 body{
     background-color: lightgray;
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .App{
@@ -15,12 +17,17 @@ body{
     top:0;
     background-color: slategray;
     height: 30px;
-    margin: 20px 0;
+    margin: 0px 0px 20px 0px ;
 }
 
 .links {
     display: flex;
     justify-content: space-evenly;
+    height: 30px;
+}
+
+.links a {
+    align-self: center;
 }
 
 .project-container {
@@ -76,8 +83,6 @@ body{
     justify-content: center;
 }
 
-.contact form {
-    display: flex;
-    flex-direction: column;
-    max-width: 60%;
+.contact-links a {
+    margin: 0px 12px;
 }
